--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: 1246533834@qq.com
 description: "喵喵喵?"
 keyword: ""
 url: "http://UnscientificMisaka.github.io"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
