--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Blog
-SEOTitle: 博客 | Blog
+SEOTitle: 自说自话
 header-img: img/home-bg.jpg
 email: 1246533834@qq.com
-description: "喵喵喵?"
+description: "庸人"
 keyword: ""
 url: "http://UnscientificMisaka.github.io"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
