--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 ba_track_id: 1084aa816d294e3c69ba301563bdf056
 # Google Analytics
 ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: lastwhisper.top
+ga_domain: lastwhisper.cn
 
 
 
