--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ ga_domain: lastwhisper.cn
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "中二病，爱发呆，。"
+sidebar-about-description: "中二病，爱发呆，我的眸子里藏着星辰。"
 sidebar-avatar: /img/大头贴.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -82,19 +82,19 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "占坑",
+        title: "薛海浪",
         href: "#"
     },{
-        title: "占坑",
+        title: "因为",
         href: "#"
     },{
-        title: "占坑",
+        title: "我",
         href: "#"
     },{
-        title: "占坑",
+        title: "只有",
         href: "#"
     },{
-        title: "占坑",
+        title: "你一个朋友啊",
         href: "#"
     }
 ]
