--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 RSS: false
 weibo_username:     5288416148
 zhihu_username:     
-github_username:    UnscientificMisaka
+#github_username:    UnscientificMisaka
 #twitter_username:  
 #facebook_username:  
 
