--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Blog
 SEOTitle: 博客
 header-img: img/home-bg.jpg
 email: 1246533834@qq.com
-description: "庸人"
+description: "懒得没有描述"
 keyword: ""
 url: "http://UnscientificMisaka.github.io"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
@@ -68,7 +68,7 @@ ga_domain: lastwhisper.cn
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "好读书，不求甚解，爱发呆，眸子里藏着星辰。"
+sidebar-about-description: "好读书，爱发呆，眸子里藏着星辰。"
 sidebar-avatar: /img/大头贴.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
