--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 个人
-SEOTitle: 个人网站
+title: Lrz Blog
+SEOTitle: 林润泽
 header-img: img/home-bg.jpg
 email: 1246533834@qq.com
 description: "懒得没有描述"
