--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Lrz Blog
+title: ""
 SEOTitle: 林润泽
 header-img: img/home-bg.jpg
 email: 1246533834@qq.com
@@ -68,7 +68,7 @@ ga_domain: lastwhisper.cn
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "好读书，不聪明，爱死磕。"
+sidebar-about-description: "这个人真懒，什么都没有留下。"
 sidebar-avatar: /img/大头贴.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -84,8 +84,5 @@ friends: [
     {
         title: "牛客",
         href: "https://www.nowcoder.com/3738937"
-    },{
-        title: "IFE",
-        href: "ife.baidu.com"
     }
 ]
